--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -13,9 +13,8 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
-  margin-left: 80px;
   letter-spacing: 0;
-  margin-left: 20px;
+  margin-left: -55px;
 }
 
 .footer__nav {
@@ -64,6 +63,10 @@
   .footer__nav {
     gap: 20px;
   }
+
+  .footer__copyright {
+    margin-left: 10px;
+  }
 }
 
 @media screen and (max-width: 425px) {
@@ -81,7 +84,8 @@
   }
   .footer__copyright {
     margin-bottom: 22px;
-    width: 288px;
+    width: 270px;
+    margin-left: 0;
     font-size: 13px;
   }
 
