--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -70,25 +70,47 @@
     font-size: 20px;
     margin-bottom: 20px;
   }
-  .modal__close {
+  /* .modal__close {
     width: 16px;
     height: 16px;
     top: 16px;
     right: 16px;
-  }
+  } */
 }
 
-@media screen and (max-width: 480px) {
-  .modal {
-    align-items: flex-start;
-  }
+@media screen and (max-width: 425px) {
   .modal__container {
     width: 100%;
-    min-height: 100vh;
-    border-radius: 0;
-    padding: 16px;
+    max-width: 430px;
+    height: 90%;
+    /* border-radius: 16px; */
+    padding: 24px 20px;
+    margin: 40px 0 -55px;
   }
+
+  .modal__title {
+    font-size: 22px;
+    margin-bottom: 32px;
+  }
+
+  .modal__form {
+    gap: 20px;
+  }
+
+  .modal__form input {
+    font-size: 16px;
+    padding: 10px 0;
+  }
+
+  .modal__form button {
+    padding: 14px;
+    font-size: 16px;
+  }
+
   .modal__close {
-    right: 16px;
+    top: -71px;
+    right: 10px;
+    width: 35px;
+    height: 35px;
   }
 }
